[package]
name = "rustlist"
version = "0.1.0"
authors = ["Rihards Zauls <rihards.zauls@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
colored = "1.8"
bytefmt =  "0.1.7"
time = { version = "0.3.20", features = ["formatting"] }
